解决一些使用警告